# HexSoftwares_Projects

./: README.md
Desktop Virtual Assistant/: main.py
Task_1.py/: FIBONACCI_GENERATOR.py
Task_2.py/: README.md  main.py  pyproject.toml
