[project]
name = "desktop-virtual-assstant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "edge-tts>=7.2.7",
    "playground",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "speechrecognition>=3.14.5",
    "webbrowser",
    "wikipedia>=1.4.0",
]
